cmake_minimum_required(VERSION 3.15)
project(workPlace)

set(CMAKE_CXX_STANDARD 14)

add_executable(workPlace main.cpp binarytree.h LinearTable/Dlist.h LinearTable/singleList.cpp LinearTable/singleList.h LinearTable/CircleList.cpp LinearTable/CircleList.h LinearTable/MyListNode.h LinearTable/CircleQueue.h LinearTable/CircleDoubleList.h LinearTable/ACircleQueue.h BinaryTree/SearchTree.h BinaryTree/ThreadTree.h LinearTable/LinearTable.h BinaryTree/Binary.h BinaryTree/Node.h BinaryTree/AVLTree.h BinaryTree/Binary.cpp BinaryTree/Heap.h BinaryTree/HuffmanTree.h)